# product-catalog

./: .dockerignore  .flake8  .gitignore  Makefile  README.md  compose.yaml  pyproject.toml
containers/pgadmin/: servers.json
containers/postgres/: Dockerfile  psql_history
scripts/: dump-all.sql
src/catalog/catalog/: settings.py  urls.py
src/catalog/products/: admin.py  apps.py  models.py  urls.py  views.py
src/catalog/products/migrations/: 0001_initial.py  0002_alter_owner_journey_alter_release_journey_and_more.py  0003_remove_vendor_journey_alter_version_journeys_and_more.py  0004_alter_vendor_journey.py  0005_remove_owner_journey_remove_team_journey_and_more.py  0006_rename_owner_assignee_project_delete_valuestream.py  0007_rename_journey_assignee_journeys_and_more.py
src/catalog/templates/: index.html  layout.html
src/catalog/templates/products/: index.html  journey_detail.html  journey_list.html  project_detail.html
